--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
 	</ul>
 	<div class="menu-overlay"></div>
 	<ul class="top-menu">
-		<li class="b-go" data-block=".b-3" data-hash="#company"><a href="#">О компании</a></li>
-		<li class="b-go" data-block=".b-4" data-hash="#objects"><a href="#">Наши объекты</a></li>
-		<li class="b-go" data-block=".b-5" data-hash="#stages">
+		<li class="b-go" data-block=".b-3"><a href="#">О компании</a></li>
+		<li class="b-go" data-block=".b-4"><a href="#">Наши объекты</a></li>
+		<li class="b-go" data-block=".b-5">
 			<a href="#">Этапы работы</a>
 			<ul class="sub-menu">
-				<li class="b-go" data-block=".b-3" data-hash="#information"><a href="#">01<span>Сбор информации по 17 пунктам</span></a></li>
-				<li class="b-go" data-block=".b-3" data-hash="#visualisation"><a href="#">02<span>5 визуализаций бесплатно</span></a></li>
-				<li class="b-go" data-block=".b-3" data-hash="#test-drive"><a href="#">03<span>10 светильников на тест-драйв</span></a></li>
-				<li class="b-go" data-block=".b-3" data-hash="#delivery"><a href="#">04<span>Поставка светильников с гарантией срока</span></a></li>
-				<li class="b-go" data-block=".b-3" data-hash="#installation"><a href="#">05<span>Монтаж своей бригадой</span></a></li>
-				<li class="b-go" data-block=".b-3" data-hash="#service"><a href="#">06<span>Обслуживание</span></a></li>
+				<li><a href="#">01<span>Сбор информации по 17 пунктам</span></a></li>
+				<li><a href="#">02<span>5 визуализаций бесплатно</span></a></li>
+				<li><a href="#">03<span>10 светильников на тест-драйв</span></a></li>
+				<li><a href="#">04<span>Поставка светильников с гарантией срока</span></a></li>
+				<li><a href="#">05<span>Монтаж своей бригадой</span></a></li>
+				<li><a href="#">06<span>Обслуживание</span></a></li>
 			</ul>
 		</li>
-		<li class="b-go" data-block=".b-6" data-hash="#team"><a href="#">Команда</a></li>
-		<li class="b-go" data-block=".b-7" data-hash="#guarantee"><a href="#">Гарантия сроков</a></li>
-		<li class="b-go" data-block=".b-8" data-hash="#optimize"><a href="#">Оптимизируем смету на 35%</a></li>
-		<li class="b-go" data-block=".b-8" data-hash="#contacts"><a href="#">Контакты</a></li>
+		<li class="b-go" data-block=".b-6"><a href="#">Команда</a></li>
+		<li class="b-go" data-block=".b-7"><a href="#">Гарантия сроков</a></li>
+		<li class="b-go" data-block=".b-8"><a href="#">Оптимизируем смету на 35%</a></li>
+		<li class="b-go" data-block=".b-8"><a href="#">Контакты</a></li>
 	</ul>
 	<div class="b b-1">
 		<div class="b-block">
@@ -101,7 +101,7 @@
 	<div class="b b-2">
 		<div class="b-block clearfix">
 			<div class="left">
-				<a href="#" class="fancy b-comm-butt" data-block="#b-popup-2">
+				<a href="#" class="fancy b-comm-butt" data-block="#b-popup-commerse">
 					<b>Получить коммерческое<br>предложение</b>
 					<span>pdf, 2.5 мб.</span>
 				</a>
@@ -183,22 +183,22 @@
 									<div class="b-task clearfix">
 										<h5>Результат</h5>
 										<h6>8 млн руб. экономии без изменения РД</h6>
-										<p>1) Мы сэкономили 4 недели, так как.РД осталась в исходном виде.<br><br>2) На свет было выделено 33 кВт, наши светильники потребляют 19 кВт<br><br>3) Смета сократилась на 30%, с 19 млн руб. до 11 млн</p>
+										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
 									</div>
 									<div class="b-hidden-tasks">
 										<div class="b-task clearfix">
 											<h5>Особенности</h5>
-											<h6>Уже была разработана Рабочая Документация</h6>
-											<p>РД была изготовлена по другому оборудованию. Нужно было подобрать светильники 1 в 1 как в РД</p>
+											<h6>Сверхсрочно и надежно</h6>
+											<p>Объект был под контролем Администрации Москвы. Сдвигать сроки было нельзя.<br>К оборудованию были повышенные требования по коэффециенту пыле- и влагозащиты IP 67 (светильники крепились на 35 метровой высоте без навеса).<br>Минимальный срок гарантии на оборудование должен был составлять 5 лет</p>
 										</div>
 										<div class="b-task clearfix">
 											<h5>Решение</h5>
-											<h6>Подобрали лучшие из 11 400 наименований светильников из ассортимента наших партнеров</h6>
-											<p>В спецификации были светильники в виде трубки длиной 1 метр в количестве 1000 штук. Мы применили бестеневую систему непрерывного освещения General Electric длиной 1000 метров. Визуально никаких различий нет, однако наш вариант оказался энергоэффективнее на 43%. Заказчики были в восторге.</p>
+											<h6>Повлияли на очередь на заводе</h6>
+											<p>Так как мы можем влиять на очередь у наших заводов-партнеров, мы совершили поставку на 1 месяц быстрее.<br>Пока производились светильники, мы параллельно оптимизировали Рабочую Документацию.<br>В то же время мы начали подготовку фасада к монтажу, собрали щит электропитания и сэкономили 2 недели.</p>
 										</div>
 									</div>
 									<div class="tleft">
-										<a href="#" class="b-green-butt b-more">Подробнее</a>
+										<a href="#" class="b-green-butt">Подробнее</a>
 									</div>
 								</div>
 								<ul class="right b-object">
@@ -206,6 +206,11 @@
 										<div class="b-img" style="background-image: url('i/b-4/1/man.jpg');"></div>
 										<h5>Объект принимал</h5>
 										<h6>Г.Греф</h6>
+									</li>
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/gerb.png');"></div>
+										<h5>Объект принимала</h5>
+										<h6>администрация города</h6>
 									</li>
 								</ul>
 							</div>
@@ -216,37 +221,46 @@
 							<div class="img" style="background-image:url('i/b-4/2/1.jpg');"></div>
 						</div>
 						<div class="b-case-desc">
-							<h3>Поставили и смонтировали светильники на 2 месяца<br>раньше срока в историческом центре Москвы</h3>
+							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
 							<div class="clearfix">
 								<div class="left">
 									<div class="b-task clearfix">
 										<h5>Задача</h5>
-										<h6>Вписаться в исторический центр Москвы</h6>
-										<p>Подчеркнуть фасад, сохранив единую световую среду центра города Москва</p>
+										<h6>Фирменный стиль Сбербанка в освещении</h6>
+										<p>Разработать архитектурно-художественное освещение, в котором узнавались бы фирменные цвета Сбербанка. Подчеркнуть контуры здания и уложиться в бюджет.</p>
 									</div>
 									<div class="b-task clearfix">
 										<h5>Результат</h5>
-										<h6>Проект закрыт на 2 месяца раньше срока</h6>
-										<p>1) На реализацию ушел 1 месяц, вместо 3-х, заложенных заказчиком.<br><br>2) Сократили смету на 38%, поставив аналогичное немецкое оборудование.<br><br>3) Запуск был в 2010 году, прожектора отлично работают и сегодня.</p>
+										<h6>8 млн руб. экономии без изменения РД</h6>
+										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
 									</div>
 									<div class="b-hidden-tasks">
 										<div class="b-task clearfix">
 											<h5>Особенности</h5>
-											<h6>Работа только в утреннее время</h6>
-											<p>Работать возможно было только с 9 до 12 утра, чтобы не тревожить гостей отеля.<br>Количество световых приборов нужно было минимизировать, чтобы не испортить фасад.</p>
+											<h6>Сверхсрочно и надежно</h6>
+											<p>Объект был под контролем Администрации Москвы. Сдвигать сроки было нельзя.<br>К оборудованию были повышенные требования по коэффециенту пыле- и влагозащиты IP 67 (светильники крепились на 35 метровой высоте без навеса).<br>Минимальный срок гарантии на оборудование должен был составлять 5 лет</p>
 										</div>
 										<div class="b-task clearfix">
 											<h5>Решение</h5>
-											<h6>Нужные светильники были у нас в наличии</h6>
-											<p>41 светильник мы взяли из наличия, через 3 дня светильники были уже на объекте. Изготовили и смонтировали крепления для светильников за 2 недели. Еще 1 неделя ушла на монтаж.</p>
+											<h6>Повлияли на очередь на заводе</h6>
+											<p>Так как мы можем влиять на очередь у наших заводов-партнеров, мы совершили поставку на 1 месяц быстрее.<br>Пока производились светильники, мы параллельно оптимизировали Рабочую Документацию.<br>В то же время мы начали подготовку фасада к монтажу, собрали щит электропитания и сэкономили 2 недели.</p>
 										</div>
 									</div>
 									<div class="tleft">
-										<a href="#" class="b-green-butt b-more">Подробнее</a>
+										<a href="#" class="b-green-butt">Подробнее</a>
 									</div>
 								</div>
 								<ul class="right b-object">
-									
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/man.jpg');"></div>
+										<h5>Объект принимал</h5>
+										<h6>Г.Греф</h6>
+									</li>
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/gerb.png');"></div>
+										<h5>Объект принимала</h5>
+										<h6>администрация города</h6>
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -264,7 +278,7 @@
 									<div class="b-task clearfix">
 										<h5>Задача</h5>
 										<h6>Поставить и смонтировать светильники быстрее конкурентов</h6>
-										<p>Нам дали коммерческое предложение конкурентов с задачей: "Нужно такое же оборудование, но быстрее и с монтажом". Конкуренты предлагали поставку за 2 месяца. Мы сделали предложение поставка + монтаж за 1,5 месяца</p>
+										<p>Нам дали коммерческое предложение конкурентов с задачей:: "Нужно такое же оборудование, но быстрее и с монтажом". Конкуренты предлагали поставку за 2 месяца. Мы сделали предложение поставка + монтаж за 1,5 месяца</p>
 									</div>
 									<div class="b-task clearfix">
 										<h5>Результат</h5>
@@ -284,10 +298,15 @@
 										</div>
 									</div>
 									<div class="tleft">
-										<a href="#" class="b-green-butt b-more">Подробнее</a>
+										<a href="#" class="b-green-butt">Подробнее</a>
 									</div>
 								</div>
 								<ul class="right b-object">
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/man.jpg');"></div>
+										<h5>Объект принимал</h5>
+										<h6>Г.Греф</h6>
+									</li>
 									<li>
 										<div class="b-img" style="background-image: url('i/b-4/1/gerb.png');"></div>
 										<h5>Объект принимала</h5>
