--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
 	</ul>
 	<div class="menu-overlay"></div>
 	<ul class="top-menu">
-		<li class="b-go" data-block=".b-3"><a href="#">О компании</a></li>
-		<li class="b-go" data-block=".b-4"><a href="#">Наши объекты</a></li>
-		<li class="b-go" data-block=".b-5">
-			<a href="#">Этапы работы</a>
+		<li class="b-go" data-block=".b-3" data-hash="#company"><a href="#">О компании</a></li>
+		<li class="b-go" data-block=".b-4" data-hash="#objects"><a href="#">Наши объекты</a></li>
+		<li>
+			<a class="b-go" data-block=".b-5" data-hash="#stages" href="#">Этапы работы</a>
 			<ul class="sub-menu">
-				<li class="b-go b-click" data-click=".b-steps .step-1" data-block=".b-5"><a href="#">01<span>Сбор информации по 17 пунктам</span></a></li>
-				<li class="b-go b-click" data-click=".b-steps .step-2" data-block=".b-5"><a href="#">02<span>5 визуализаций бесплатно</span></a></li>
-				<li class="b-go b-click" data-click=".b-steps .step-3" data-block=".b-5"><a href="#">03<span>10 светильников на тест-драйв</span></a></li>
-				<li class="b-go b-click" data-click=".b-steps .step-4" data-block=".b-5"><a href="#">04<span>Поставка светильников с гарантией срока</span></a></li>
-				<li class="b-go b-click" data-click=".b-steps .step-5" data-block=".b-5"><a href="#">05<span>Монтаж своей бригадой</span></a></li>
-				<li class="b-go b-click" data-click=".b-steps .step-6" data-block=".b-5"><a href="#">06<span>Обслуживание</span></a></li>
+				<li class="b-go b-click" data-click=".b-steps .step-1" data-block=".b-5" data-hash="#information"><a href="#">01<span>Сбор информации по 17 пунктам</span></a></li>
+				<li class="b-go b-click" data-click=".b-steps .step-2" data-block=".b-5" data-hash="#visualisation"><a href="#">02<span>5 визуализаций бесплатно</span></a></li>
+				<li class="b-go b-click" data-click=".b-steps .step-3" data-block=".b-5" data-hash="#test-drive"><a href="#">03<span>10 светильников на тест-драйв</span></a></li>
+				<li class="b-go b-click" data-click=".b-steps .step-4" data-block=".b-5" data-hash="#delivery"><a href="#">04<span>Поставка светильников с гарантией срока</span></a></li>
+				<li class="b-go b-click" data-click=".b-steps .step-5" data-block=".b-5" data-hash="#installation"><a href="#">05<span>Монтаж своей бригадой</span></a></li>
+				<li class="b-go b-click" data-click=".b-steps .step-6" data-block=".b-5" data-hash="#service"><a href="#">06<span>Обслуживание</span></a></li>
 			</ul>
 		</li>
-		<li class="b-go" data-block=".b-6"><a href="#">Команда</a></li>
-		<li class="b-go" data-block=".b-7"><a href="#">Гарантия сроков</a></li>
-		<li class="b-go" data-block=".b-8"><a href="#">Оптимизируем смету на 35%</a></li>
-		<li class="b-go" data-block=".b-8"><a href="#">Контакты</a></li>
+		<li class="b-go" data-block=".b-6" data-hash="#team"><a href="#">Команда</a></li>
+		<li class="b-go" data-block=".b-7" data-hash="#guarantee"><a href="#">Гарантия сроков</a></li>
+		<li class="b-go" data-block=".b-8" data-hash="#optimize"><a href="#">Оптимизируем смету на 35%</a></li>
+		<li class="b-go" data-block=".b-8" data-hash="#contacts"><a href="#">Контакты</a></li>
 	</ul>
 	<div class="b b-1">
 		<div class="b-block">
