--- a/thankyou.html
+++ b/thankyou.html
@@ -38,7 +38,7 @@
 <body>
 	<div class="menu-overlay"></div>
 	<ul class="top-menu">
-		<li><a href="/#about-company">О компании</a></li>
+		<li><a href="/#company">О компании</a></li>
 		<li><a href="/#objects">Наши объекты</a></li>
 		<li>
 			<a href="/#stages">Этапы работы</a>
@@ -46,15 +46,15 @@
 				<li><a href="/#information">01<span>Сбор информации по 17 пунктам</span></a></li>
 				<li><a href="/#visualisation">02<span>5 визуализаций бесплатно</span></a></li>
 				<li><a href="/#test-drive">03<span>10 светильников на тест-драйв</span></a></li>
-				<li><a href="/#guarantee">04<span>Поставка светильников с гарантией срока</span></a></li>
+				<li><a href="/#delivery">04<span>Поставка светильников с гарантией срока</span></a></li>
 				<li><a href="/#installation">05<span>Монтаж своей бригадой</span></a></li>
 				<li><a href="/#service">06<span>Обслуживание</span></a></li>
 			</ul>
 		</li>
-		<li><a href="#">Команда</a></li>
-		<li><a href="#">Гарантия сроков</a></li>
-		<li><a href="#">Оптимизируем смету на 35%</a></li>
-		<li><a href="#">Контакты</a></li>
+		<li><a href="/#team">Команда</a></li>
+		<li><a href="/#guarantee">Гарантия сроков</a></li>
+		<li><a href="/#optimize">Оптимизируем смету на 35%</a></li>
+		<li><a href="/#contacts">Контакты</a></li>
 	</ul>
 	<div class="b b-1 b-thanks">
 		<div class="b-block">
