--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 	<ul class="top-menu">
 		<li class="b-go" data-block=".b-3" data-hash="#company"><a href="#">О компании</a></li>
 		<li class="b-go" data-block=".b-4" data-hash="#objects"><a href="#">Наши объекты</a></li>
-		<li>
-			<a class="b-go" data-block=".b-5" data-hash="#stages" href="#">Этапы работы</a>
+		<li class="b-go" data-block=".b-5" data-hash="#stages">
+			<a href="#">Этапы работы</a>
 			<ul class="sub-menu">
 				<li class="b-go b-click" data-click=".b-steps .step-1" data-block=".b-5" data-hash="#information"><a href="#">01<span>Сбор информации по 17 пунктам</span></a></li>
 				<li class="b-go b-click" data-click=".b-steps .step-2" data-block=".b-5" data-hash="#visualisation"><a href="#">02<span>5 визуализаций бесплатно</span></a></li>
