--- a/thankyou.html
+++ b/thankyou.html
@@ -35,33 +35,33 @@
 	<script type="text/javascript" src="js/main.js"></script>
 
 </head>
-<body>
+<body class="thankyou">
 	<div class="menu-overlay"></div>
 	<ul class="top-menu">
-		<li><a href="/#company">О компании</a></li>
-		<li><a href="/#objects">Наши объекты</a></li>
+		<li><a href="index.html#company">О компании</a></li>
+		<li><a href="index.html#objects">Наши объекты</a></li>
 		<li>
-			<a href="/#stages">Этапы работы</a>
+			<a href="index.html#stages">Этапы работы</a>
 			<ul class="sub-menu">
-				<li><a href="/#information">01<span>Сбор информации по 17 пунктам</span></a></li>
-				<li><a href="/#visualisation">02<span>5 визуализаций бесплатно</span></a></li>
-				<li><a href="/#test-drive">03<span>10 светильников на тест-драйв</span></a></li>
-				<li><a href="/#delivery">04<span>Поставка светильников с гарантией срока</span></a></li>
-				<li><a href="/#installation">05<span>Монтаж своей бригадой</span></a></li>
-				<li><a href="/#service">06<span>Обслуживание</span></a></li>
+				<li><a href="index.html#information">01<span>Сбор информации по 17 пунктам</span></a></li>
+				<li><a href="index.html#visualisation">02<span>5 визуализаций бесплатно</span></a></li>
+				<li><a href="index.html#test-drive">03<span>10 светильников на тест-драйв</span></a></li>
+				<li><a href="index.html#delivery">04<span>Поставка светильников с гарантией срока</span></a></li>
+				<li><a href="index.html#installation">05<span>Монтаж своей бригадой</span></a></li>
+				<li><a href="index.html#service">06<span>Обслуживание</span></a></li>
 			</ul>
 		</li>
-		<li><a href="/#team">Команда</a></li>
-		<li><a href="/#guarantee">Гарантия сроков</a></li>
-		<li><a href="/#optimize">Оптимизируем смету на 35%</a></li>
-		<li><a href="/#contacts">Контакты</a></li>
+		<li><a href="index.html#team">Команда</a></li>
+		<li><a href="index.html#guarantee">Гарантия сроков</a></li>
+		<li><a href="index.html#optimize">Оптимизируем смету на 35%</a></li>
+		<li><a href="index.html#contacts">Контакты</a></li>
 	</ul>
 	<div class="b b-1 b-thanks">
 		<div class="b-block">
 			<div class="b-top">
 				<div class="b-logo-cont left clearfix">
 					<div class="b-burger-button-cont left"><a href="#" class="b-burger-button"><span></span></a></div>
-					<a href="#"><img src="i/logo.png" class="left" alt=""></a>
+					<a href="index.html"><img src="i/logo.png" class="left" alt=""></a>
 					<div class="b-logo-text left">ОСВЕЩЕНИЕ ЗДАНИЙ<br>И СООРУЖЕНИЙ</div>
 				</div>
 				<div class="b-date-cont right clearfix">
