--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				</li>
 				<li class="b-pip-3">
 					<span></span>
-					<p>Поставили и смонтировали<br>светильники для здания<br>Сбербанка в г. Самара<br><a href='#' class="b-white-link">Подробнее</a></p>
+					<p>Поставили и смонтировали<br>светильники для здания<br>Сбербанка в г. Самара<br><a href='#' class="b-white-link b-go b-click" data-click=".sber" data-block=".b-4">Подробнее</a></p>
 				</li>
 			</ul>
 		</div>
@@ -148,7 +148,7 @@
 			<div class="b-case clearfix">
 				<div class="left">
 					<ul class="b-left-thumbs b-case-thumbs">
-						<li class="active">
+						<li class="sber active">
 							<h5>01.</h5>
 							<h6>Сбербанк России</h6>
 						</li>
@@ -198,7 +198,7 @@
 										</div>
 									</div>
 									<div class="tleft">
-										<a href="#" class="b-green-butt">Подробнее</a>
+										<a href="#" class="b-green-butt b-more">Подробнее</a>
 									</div>
 								</div>
 								<ul class="right b-object">
@@ -247,7 +247,7 @@
 										</div>
 									</div>
 									<div class="tleft">
-										<a href="#" class="b-green-butt">Подробнее</a>
+										<a href="#" class="b-green-butt b-more">Подробнее</a>
 									</div>
 								</div>
 								<ul class="right b-object">
@@ -298,7 +298,7 @@
 										</div>
 									</div>
 									<div class="tleft">
-										<a href="#" class="b-green-butt">Подробнее</a>
+										<a href="#" class="b-green-butt b-more">Подробнее</a>
 									</div>
 								</div>
 								<ul class="right b-object">
@@ -445,7 +445,7 @@
 					<div class="b-shine step" data-delay="200" data-duration="800"></div>
 					<div class="b-map"></div>
 					<div class="b-text-cont">
-						<h3 class="step" data-delay="200">Подберем идеальное оборудование<br>под вашу задачу из 11 000 изделий<br>на 56-ти заводах!</h3>
+						<h3 class="step" data-delay="200">Подберем целесообразные вашей<br>задаче светильники из 11 000 изделий<br>на 56-ти заводах</h3>
 						<div class="b-list clearfix">
 							<p class="step" data-delay="800"><span>01.</span>Сохраняем качество и<br>экономим до 35% за счет<br>подбора аналогичных изделий.</p>
 							<p class="step" data-delay="1200"><span>02.</span>Юридически гарантируем<br>срок поставки.</p>
