--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	</ul>
 	<div class="b b-1">
 		<div class="b-block">
-			<div class="b-top">
+			<div class="b-top clearfix">
 				<div class="b-logo-cont left clearfix">
 					<div class="b-burger-button-cont left"><a href="#" class="b-burger-button"><span></span></a></div>
 					<a href="#"><img src="i/logo.png" class="left" alt=""></a>
@@ -78,7 +78,7 @@
 				</div>
 			</div>
 			<h1>Архитектурное<br>освещение зданий<br>и сооружений по<br>всей России</h1>
-			<h4>Проектирование, поставка, монтаж.<br>Юридическая гарантия сроков</h4>
+			<h4>Проектирование, поставка, монтаж<br>Юридическая гарантия сроков</h4>
 			<div class="b-line b-line-1"></div>
 			<ul class="b-pips">
 				<li class="b-pip-1">
@@ -121,12 +121,12 @@
 				<li>
 					<span></span>
 					<h3>Монтаж</h3>
-					<p>За 3 дня выведем на ваш<br>объект до 12 монтажников<br>4-го разряда с опытом от<br>5 лет.</p>
+					<p>За 3 дня выведем на ваш<br>объект до 12 монтажников<br>4-го разряда с опытом от<br>5 лет</p>
 				</li>
 				<li>
 					<span></span>
 					<h3>Поставка и логистика</h3>
-					<p>Доставка по всей России за<br>наш счет. Также самолетные<br>доставки при необходимости.</p>
+					<p>Доставка по всей России за<br>наш счет. Также самолетные<br>доставки при необходимости</p>
 				</li>
 				<li>
 					<span></span>
@@ -136,7 +136,7 @@
 				<li>
 					<span></span>
 					<h3>Заводы-производители</h3>
-					<p>56 прямых контрактов с<br>заводами-производителями в<br>России, Европе, США и Азии.</p>
+					<p>56 прямых контрактов с<br>заводами-производителями в<br>России, Европе, США и Азии</p>
 				</li>
 			</ul>
 		</div>
@@ -144,11 +144,11 @@
 	<div class="b b-4">
 		<div class="b-block">
 			<h2 class="b-title">Мы сэкономили на освещении<br>нашим заказчикам свыше 27 млн руб.<br>за последние полгода</h2>
-			<h4 class="b-subtitle">Оптимизировали смету в каждом проекте в среднем на 29% за счет подбора<br>аналогичного оборудования на других завода</h4>
+			<h4 class="b-subtitle">Оптимизировали смету в каждом проекте в среднем на 29% за счет подбора<br>аналогичного оборудования на других заводах</h4>
 			<div class="b-case clearfix">
 				<div class="left">
 					<ul class="b-left-thumbs b-case-thumbs">
-						<li class="sber active">
+						<li class="active">
 							<h5>01.</h5>
 							<h6>Сбербанк России</h6>
 						</li>
@@ -183,18 +183,18 @@
 									<div class="b-task clearfix">
 										<h5>Результат</h5>
 										<h6>8 млн руб. экономии без изменения РД</h6>
-										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
+										<p>1) Мы сэкономили 4 недели, так как.РД осталась в исходном виде.<br><br>2) На свет было выделено 33 кВт, наши светильники потребляют 19 кВт<br><br>3) Смета сократилась на 30%, с 19 млн руб. до 11 млн</p>
 									</div>
 									<div class="b-hidden-tasks">
 										<div class="b-task clearfix">
 											<h5>Особенности</h5>
-											<h6>Сверхсрочно и надежно</h6>
-											<p>Объект был под контролем Администрации Москвы. Сдвигать сроки было нельзя.<br>К оборудованию были повышенные требования по коэффециенту пыле- и влагозащиты IP 67 (светильники крепились на 35 метровой высоте без навеса).<br>Минимальный срок гарантии на оборудование должен был составлять 5 лет</p>
+											<h6>Уже была разработана Рабочая Документация</h6>
+											<p>РД была изготовлена по другому оборудованию. Нужно было подобрать светильники 1 в 1 как в РД</p>
 										</div>
 										<div class="b-task clearfix">
 											<h5>Решение</h5>
-											<h6>Повлияли на очередь на заводе</h6>
-											<p>Так как мы можем влиять на очередь у наших заводов-партнеров, мы совершили поставку на 1 месяц быстрее.<br>Пока производились светильники, мы параллельно оптимизировали Рабочую Документацию.<br>В то же время мы начали подготовку фасада к монтажу, собрали щит электропитания и сэкономили 2 недели.</p>
+											<h6>Подобрали лучшие из 11 400 наименований светильников из ассортимента наших партнеров</h6>
+											<p>В спецификации были светильники в виде трубки длиной 1 метр в количестве 1000 штук. Мы применили бестеневую систему непрерывного освещения General Electric длиной 1000 метров. Визуально никаких различий нет, однако наш вариант оказался энергоэффективнее на 43%. Заказчики были в восторге.</p>
 										</div>
 									</div>
 									<div class="tleft">
@@ -206,11 +206,6 @@
 										<div class="b-img" style="background-image: url('i/b-4/1/man.jpg');"></div>
 										<h5>Объект принимал</h5>
 										<h6>Г.Греф</h6>
-									</li>
-									<li>
-										<div class="b-img" style="background-image: url('i/b-4/1/gerb.png');"></div>
-										<h5>Объект принимала</h5>
-										<h6>администрация города</h6>
 									</li>
 								</ul>
 							</div>
@@ -221,29 +216,29 @@
 							<div class="img" style="background-image:url('i/b-4/2/1.jpg');"></div>
 						</div>
 						<div class="b-case-desc">
-							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
+							<h3>Поставили и смонтировали светильники на 2 месяца<br>раньше срока в историческом центре Москвы</h3>
 							<div class="clearfix">
 								<div class="left">
 									<div class="b-task clearfix">
 										<h5>Задача</h5>
-										<h6>Фирменный стиль Сбербанка в освещении</h6>
-										<p>Разработать архитектурно-художественное освещение, в котором узнавались бы фирменные цвета Сбербанка. Подчеркнуть контуры здания и уложиться в бюджет.</p>
+										<h6>Вписаться в исторический центр Москвы</h6>
+										<p>Подчеркнуть фасад, сохранив единую световую среду центра города Москва</p>
 									</div>
 									<div class="b-task clearfix">
 										<h5>Результат</h5>
-										<h6>8 млн руб. экономии без изменения РД</h6>
-										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
+										<h6>Проект закрыт на 2 месяца раньше срока</h6>
+										<p>1) На реализацию ушел 1 месяц, вместо 3-х, заложенных заказчиком.<br><br>2) Сократили смету на 38%, поставив аналогичное немецкое оборудование.<br><br>3) Запуск был в 2010 году, прожектора отлично работают и сегодня.</p>
 									</div>
 									<div class="b-hidden-tasks">
 										<div class="b-task clearfix">
 											<h5>Особенности</h5>
-											<h6>Сверхсрочно и надежно</h6>
-											<p>Объект был под контролем Администрации Москвы. Сдвигать сроки было нельзя.<br>К оборудованию были повышенные требования по коэффециенту пыле- и влагозащиты IP 67 (светильники крепились на 35 метровой высоте без навеса).<br>Минимальный срок гарантии на оборудование должен был составлять 5 лет</p>
+											<h6>Работа только в утреннее время</h6>
+											<p>Работать возможно было только с 9 до 12 утра, чтобы не тревожить гостей отеля.<br>Количество световых приборов нужно было минимизировать, чтобы не испортить фасад.</p>
 										</div>
 										<div class="b-task clearfix">
 											<h5>Решение</h5>
-											<h6>Повлияли на очередь на заводе</h6>
-											<p>Так как мы можем влиять на очередь у наших заводов-партнеров, мы совершили поставку на 1 месяц быстрее.<br>Пока производились светильники, мы параллельно оптимизировали Рабочую Документацию.<br>В то же время мы начали подготовку фасада к монтажу, собрали щит электропитания и сэкономили 2 недели.</p>
+											<h6>Нужные светильники были у нас в наличии</h6>
+											<p>41 светильник мы взяли из наличия, через 3 дня светильники были уже на объекте. Изготовили и смонтировали крепления для светильников за 2 недели. Еще 1 неделя ушла на монтаж.</p>
 										</div>
 									</div>
 									<div class="tleft">
@@ -251,24 +246,15 @@
 									</div>
 								</div>
 								<ul class="right b-object">
-									<li>
-										<div class="b-img" style="background-image: url('i/b-4/1/man.jpg');"></div>
-										<h5>Объект принимал</h5>
-										<h6>Г.Греф</h6>
-									</li>
-									<li>
-										<div class="b-img" style="background-image: url('i/b-4/1/gerb.png');"></div>
-										<h5>Объект принимала</h5>
-										<h6>администрация города</h6>
-									</li>
+									
 								</ul>
 							</div>
 						</div>
 					</div>
 					<div class="b-slide">
 						<div class="b-gallery">
-							<div class="img" style="background-image:url('i/b-4/3/1.jpg');"></div>
 							<div class="img" style="background-image:url('i/b-4/3/2.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/3/1.jpg');"></div>
 							<div class="img" style="background-image:url('i/b-4/3/3.jpg');"></div>
 						</div>
 						<div class="b-case-desc">
@@ -278,7 +264,7 @@
 									<div class="b-task clearfix">
 										<h5>Задача</h5>
 										<h6>Поставить и смонтировать светильники быстрее конкурентов</h6>
-										<p>Нам дали коммерческое предложение конкурентов с задачей:: "Нужно такое же оборудование, но быстрее и с монтажом". Конкуренты предлагали поставку за 2 месяца. Мы сделали предложение поставка + монтаж за 1,5 месяца</p>
+										<p>Нам дали коммерческое предложение конкурентов с задачей: "Нужно такое же оборудование, но быстрее и с монтажом". Конкуренты предлагали поставку за 2 месяца. Мы сделали предложение поставка + монтаж за 1,5 месяца</p>
 									</div>
 									<div class="b-task clearfix">
 										<h5>Результат</h5>
@@ -302,11 +288,6 @@
 									</div>
 								</div>
 								<ul class="right b-object">
-									<li>
-										<div class="b-img" style="background-image: url('i/b-4/1/man.jpg');"></div>
-										<h5>Объект принимал</h5>
-										<h6>Г.Греф</h6>
-									</li>
 									<li>
 										<div class="b-img" style="background-image: url('i/b-4/1/gerb.png');"></div>
 										<h5>Объект принимала</h5>
@@ -459,7 +440,7 @@
 					<div class="b-workers"></div>
 					<div class="b-text-cont">
 						<h3 class="step" data-delay="200">За 3 дня выведем на ваш объект<br>до 12 монтажников 4-го разряда<br>с опытом от 5 лет</h3>
-						<p class="step" data-delay="800">Экономим до 2-х недель. Начинаем монтажные работы параллельно<br>с производством ветильников.</p>
+						<p class="step" data-delay="800">Экономим до 2-х недель. Начинаем монтажные работы параллельно<br>с производством светильников.</p>
 					</div>
 				</div>
 			</li>
@@ -530,7 +511,7 @@
 							</li>
 						</ul>
 						<div class="b-desc">
-							<h3>«Наша основная задача — дать Вам не то решение,<br>которое Вы ожидали. А найти куда более выгодное»</h3>
+							<h3>«Наша основная задача — дать Вам не то решение,<br>которое Вы ожидали, а найти куда более выгодное»</h3>
 							<p>Вы заключаете контракт напрямую с заводом и получаете светильники по заводской цене, а иногда можете даже воспользоваться нашими скидками. Мы получаем комиссию от завода и отвечаем перед Вами за сроки поставки, а затем, если необходимо, монтируем и обслуживаем. Это значит, что нам выгодно поставить вам 1 раз и навсегда.<br><br>При этом средняя экономия сметы на проекте достигает 29% — просто потому что мы знаем десятки заводов-производителей, весь их ассортимент, складские остатки, стоимость и сроки изготовления и можем подобрать наиболее оптимальный вариант.<br><br>Если хотите пообщаться со мной лично  — оставьте заявку ниже.</p>
 						</div>
 						<div class="b-butt-cont">
@@ -591,7 +572,7 @@
 						<div class="b-image-cont">
 							<div class="b-image" style="background-image: url('i/b-6/4.png');"></div>
 							<h3>Ян Удалых</h3>
-							<h5>Генеральный директор</h5>
+							<h5>Руководитель монтажной группы</h5>
 						</div>
 						<ul class="b-skill clearfix">
 							<li>
@@ -631,7 +612,7 @@
 						</ul>
 						<div class="b-desc">
 							<h3>«Фасад  —  это как костюм. Это очень важно. Свет может испортить фасад, а может подчеркнуть его и сделать незабываемым. Архитектору всегда большой кровью дается согласование своего фасада с заказчиком и с городом»</h3>
-							<p>Иван — тот человек, без кого наша работа невозможна. Мы всегда хотим быть уверены, что наши решения по свету подчеркнут фасад здания и нисколько ему не навредят с эстетической точки зрения. Поэтому в нашей команде работает Иван, бронзовый призер Всероссийского архитектурного конкурса Территория-дизайна (Винзавод, 2013); золотой призер Всероссийского архитектурного конкурса Белая башня (ТАТЛИН, 2014).<br><br>Иван дает участвует во всех проектах, дает рекомендации и предлагает оригинальные решения. Если вы хотите проконсультироваться с архитектором — оставьте заявку ниже.</p>
+							<p>Иван — тот человек, без кого наша работа невозможна. Мы всегда хотим быть уверены, что наши решения по свету подчеркнут фасад здания и нисколько ему не навредят с эстетической точки зрения. Поэтому в нашей команде работает Иван, бронзовый призер Всероссийского архитектурного конкурса Территория-дизайна (Винзавод, 2013); золотой призер Всероссийского архитектурного конкурса Белая башня (ТАТЛИН, 2014).<br><br>Иван участвует во всех проектах, дает рекомендации и предлагает оригинальные решения. Если вы хотите проконсультироваться с архитектором — оставьте заявку ниже.</p>
 						</div>
 						<div class="b-butt-cont">
 							<a href="#" class="b-green-butt fancy" data-beforeShow="staff" data-name="Иван" data-block="#b-popup-consult">получить консультацию у ивана</a>
@@ -714,7 +695,7 @@
 				</div>
 				<div class="right">
 					<h3>Наш офис находится по адресу</h3>
-					<h4>г. Москва, Б. Дмитровская, 11/2<br>м. Чеховская</h4>
+					<h4>г. Москва, ул. Большая Новодмитровская<br>д.36 к.12</h4>
 					<a href="#" class="b-white-butt">Смотреть на карте</a>
 				</div>
 			</div>
@@ -736,9 +717,9 @@
 				</div>
 			</div>
 			<div class="left b-dev-cont">
-				<p>Текст и структура — <a href="#" target="_blank">Киселев</a> и <a href="#" target="_blank">Сургай</a></p>
-				<p>Дизайн сайта — <a href="#" target="_blank">Conversion<b>Art</b></a></p>
-				<p>Верстка — <a href="#" target="_blank">LineUp</a></p>
+				<p>Текст и структура — <a href="https://vk.com/jenyarocketman" target="_blank">Киселев</a> и <a href="https://vk.com/surgay.marketing" target="_blank">Сургай</a></p>
+				<p>Дизайн сайта — <a href="http://conversionart.ru/" target="_blank">Conversion<b>Art</b></a></p>
+				<p>Верстка — <a href="http://line-up.ru/" target="_blank">LineUp</a></p>
 			</div>
 		</div>
 	</div>
@@ -766,7 +747,7 @@
 					<input type="submit" class="ajax b-green-butt" value="Получить консультацию">
 				</div>
 			</form>
-			<h5>или позвоните нам по телефону<br><span>8 (495) 212-16-71</span></h5>
+			<h5>или позвоните нам по телефону<br><span>+7 (495) 664-46-74</span></h5>
 		</div>
 	</div>
 	<div id="b-popup-callback">
