--- a/thankyou.html
+++ b/thankyou.html
@@ -75,7 +75,7 @@
 				<p>Мы свяжемся с Вами в ближайшее время.<br>
 				Время работы нашего офиса — c понедельника<br>по пятницу с 9:00 до 20:00 по Москве</p>
 				<p>Если у Вас есть срочный вопрос, звоните<br>нам по телефону </p>
-				<p style="margin-top: 18px;"><span>8 (800) 388 1880</span> (бесплатно по России)</p>
+				<p style="margin-top: 18px;"><span>+7 (495) 664-46-74</span></p>
 				<div class="clearfix sign-cont">
 					<img src="i/face.png" class="left">
 					<div class="left">
@@ -132,7 +132,7 @@
 					<input type="submit" class="ajax b-green-butt" value="Получить консультацию">
 				</div>
 			</form>
-			<h5>или позвоните нам по телефону<br><span>8 (495) 212-16-71</span></h5>
+			<h5>или позвоните нам по телефону<br><span>+7 (495) 664-46-74</span></h5>
 		</div>
 	</div>
 	<div id="b-popup-callback">
