--- a/index.html
+++ b/index.html
@@ -864,7 +864,8 @@
 				<li><span>07.</span>Фотографии реализованных объектов с такими же светильниками</li>
 				<li><span>08.</span>Пилотный светотехнический расчет</li>
 			</ul>
-			<input type="submit" class="ajax b-green-butt" onclick="$.fancybox($('#b-popup-commerse'),{padding:0}); return false;" value="Получить предложение">
+			<input type="submit" class="ajax b-green-butt" onclick="$('#hidden-click').click(); return false;" value="Получить предложение">
+			<input type="hidden" id="hidden-click" class="fancy" data-block="#b-popup-commerse">
 		</div>
 	</div>
 	<div id="b-popup-tz">
