--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
 		<div class="for_all b-popup commerse-cont">
 			<h3>Получите коммерческое предложение<br>и узнайте, как сократить смету на 35%</h3>
 			<div class="commerse clearfix">
-				<a href="#" class="fancy left" data-block="#b-popup-commerse-ex">Посмотреть содержание</a>
+				<a href="#" class="left" onclick="$.fancybox($('#b-popup-commerse-ex'),{afterShow:function(){setTimeout(function(){$('.fancybox-wrap').css('position','absolute');$('.fancybox-inner').css('height','auto');},200);},padding:0,helpers: {overlay: { showEarly : false, locked: true}}}); $('html').addClass('fancybox-margin').addClass('fancybox-lock'); $('.fancybox-overlay').html($('.fancybox-wrap')); return false;" >Посмотреть содержание</a>
 				<div class="right">
 					<h4><span>Оставьте заявку</span><br>на разработку коммерческого предложения</h4>
 					<form action="kitsend.php" method="POST" data-block="#b-popup-2">
@@ -794,7 +794,7 @@
 		<div class="for_all b-popup commerse-cont">
 			<h3>Скачайте пример нашего<br>коммерческого предложения</h3>
 			<div class="commerse clearfix">
-				<a href="#" class="fancy left" data-block="#b-popup-commerse-ex">Посмотреть содержание</a>
+				<a href="#" class="left" onclick="$.fancybox($('#b-popup-commerse-ex'),{afterShow:function(){setTimeout(function(){$('.fancybox-wrap').css('position','absolute');$('.fancybox-inner').css('height','auto');},200);},padding:0,helpers: {overlay: { showEarly : false, locked: true}}}); $('html').addClass('fancybox-margin').addClass('fancybox-lock'); $('.fancybox-overlay').html($('.fancybox-wrap')); return false;">Посмотреть содержание</a>
 				<div class="right">
 					<h4><span>Заполните форму,</span><br>и пример коммерческого предложения<br>будет выслан вам на почту</h4>
 					<form action="kitsend.php" method="POST" data-block="#b-popup-2">
@@ -864,7 +864,7 @@
 				<li><span>07.</span>Фотографии реализованных объектов с такими же светильниками</li>
 				<li><span>08.</span>Пилотный светотехнический расчет</li>
 			</ul>
-			<input type="submit" class="ajax b-green-butt" onclick="$.fancybox($('#b-popup-commerse'),{fitToView: false, afterShow:function(){setTimeout(function(){$('.fancybox-wrap').css('position','absolute');$('.fancybox-inner').css('height','auto');},100);},padding:0,helpers: {overlay: { showEarly : false, locked: true}}}); $('html').addClass('fancybox-margin').addClass('fancybox-lock'); $('.fancybox-overlay').html($('.fancybox-wrap')); return false;" value="Получить предложение">
+			<input type="submit" class="ajax b-green-butt" onclick="$.fancybox($('#b-popup-commerse'),{afterShow:function(){setTimeout(function(){$('.fancybox-wrap').css('position','absolute');$('.fancybox-inner').css('height','auto');},200);},padding:0,helpers: {overlay: { showEarly : false, locked: true}}}); $('html').addClass('fancybox-margin').addClass('fancybox-lock'); $('.fancybox-overlay').html($('.fancybox-wrap')); return false;" value="Получить предложение">
 		</div>
 	</div>
 	<div id="b-popup-tz">
