--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<li class="b-go" data-block=".b-6" data-hash="#team"><a href="#">О компании</a></li>
 		<li class="b-go" data-block=".b-7" data-hash="#guarantee"><a href="#">Гарантия сроков</a></li>
 		<li class="b-go" data-block=".b-8" data-hash="#optimize"><a href="#">Оптимизируем смету на 35%</a></li>
-		<li class="b-go" data-block=".b-8" data-hash="#contacts"><a href="#">Контакты</a></li>
+		<li class="b-go" data-block=".b-9" data-hash="#contacts"><a href="#">Контакты</a></li>
 	</ul>
 	<div class="b b-1">
 		<div class="b-block">
@@ -75,7 +75,7 @@
 				<div class="b-date-cont right clearfix">
 					<!-- <p class="left">Звонок по России<br>бесплатный</p> -->
 					<h2 class="left">+7 (495) 664-46-74</h2>
-					<h3><a href="#" class="fancy b-white-link" data-block="#b-popup-callback">Перезвоните мне</a></h3>
+					<h3><a href="#" class="fancy b-white-link" data-block="#b-popup-callback">Заказать звонок</a></h3>
 				</div>
 			</div>
 			<h1>Архитектурное<br>освещение зданий<br>и сооружений по<br>всей России</h1>
